--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -18,7 +18,7 @@
                 <!--PASSWORD-->
                 <div class="form-user">
                     <label for="password">Contraseña</label>                    
-                    <input type="password" id="password" placeholder="Escriba su contraseña">
+                    <input type="password" id="PASSWORD" placeholder="Escriba su contraseña">
                 </div>
                 <!-- BUTTON LOGIN -->
                 <input type="submit" onclick="/inicio.html" value="INGRESAR">
@@ -34,7 +34,7 @@
         </form>
     </div>
     <footer class="footer">
-        <p> &copy; TRYS BUS 2020 - Todos los derechos reservados</p>
+        <p> &copy; TRYS BUS 2020 - copyright DENNIS Y SINTIA -Todos los derechos reservados</p>
     </footer>
 </body>
 
