--- a/src/views/login/login.html
+++ b/src/views/login/login.html
@@ -34,7 +34,7 @@
         </form>
     </div>
     <footer class="footer">
-        <p> &copy; TRYS BUS 2020 - copyright DENNIS Y SINTIA -Todos los derechos reservados</p>
+        <p> &copy; TRYS BUS 2020 - copyright DENNIS cassa -Todos los derechos reservados</p>
     </footer>
 </body>
 
