migrado a ejs trbajo de la compañera

--- a/views/inicio/inicio.ejs
+++ b/views/inicio/inicio.ejs
@@ -21,11 +21,11 @@
                 <i class="fa fa-caret-down"></i>
             </button>
                 <div class="dropdown-content">
-                    <a href="#"><i class="fas fa-clock"></i> Tiempos de control</a>
-                    <a href="#"><i class="fas fa-map-marker-alt"></i> Monitoreo</a>
-                    <a href="#"><i class="fas fa-map"></i> Recorrido</a>
-                    <a href="#"><i class="fas fa-clock"></i> Asistencias</a>
-                    <a href="#"><i class="fas fa-wifi"></i> Conectados</a>
+                    <a href="/tiemposControl"><i class="fas fa-clock"></i> Tiempos de control</a>
+                    <a href="/monitoreo"><i class="fas fa-map-marker-alt"></i> Monitoreo</a>
+                    <a href="/recorrido"><i class="fas fa-map"></i> Recorrido</a>
+                    <a href="/asistencia"><i class="fas fa-clock"></i> Asistencias</a>
+                    <a href="/conectados"><i class="fas fa-wifi"></i> Conectados</a>
                 </div>
             </div>
             <div class="dropdown1 left">
@@ -53,7 +53,10 @@
                     <a href="#"><i class="fas fa-sign-out-alt"></i> Salir</a>
                 </div>
             </div>
-                        
+                    
+            <a href="javascript:void(0);" class="right hour active">
+                <h4 id="box-time"><strong></strong></h4>
+            </a>
             <a href="javascript:void(0);" style="font-size:15px;" class="icon" onclick="hamburgerMenu()">&#9776;</a>
         </div>
     </div>
