--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -36,7 +36,7 @@
         </form>
     </div>
     <footer class="footer">
-        <p> &copy; TRYS BUS 2020 - copyright - Todos los derechos reservados</p>
+        <p> &copy; TRYS BUS 2020 - Todos los derechos reservados</p>
     </footer>
 </body>
 
