plantillaEJS login responsive

--- a/views/inicio/inicio.ejs
+++ b/views/inicio/inicio.ejs
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="/stylesheets/inicio.css">
+    <title>Inicio Trys bus</title>  
 
-    <title>Inicio Trys bus</title>    
 </head>
 
 <body>
     <!-- TOP NAVBAR -->
     <div class="container-navbar">
         <div class="topnav" id="myTopnav">
-            <a href="" class="left"> <i class="fa fa-home"></i><strong> Inicio</strong></a>
+            <a href="/inicio" class="left"> <i class="fa fa-home"></i><strong> Inicio</strong></a>
             <a href="" class="left"> <i class="fa fa-puzzle-piece"></i><strong> Procesos</strong></a>
             
             <div class="dropdown1 left">
