--- a/public/stylesheets/login.css
+++ b/public/stylesheets/login.css
@@ -11,7 +11,7 @@ input[type="checkbox"] {
 }
 /*----------BODY STYLES-----------*/
 
-body {
+#body {
     margin: 0;
     padding: 0;
     background: #254050;
@@ -21,13 +21,10 @@ body {
     overflow: hidden;
 }
 
-
 /*---------------LOGIN STYLES-----------------*/
 
 /**/
-.login-box {
-    width: 320px;
-    height: 400px;
+#login-box {
     background: #ffffff;
     color: black;
     top: 50%;
@@ -39,39 +36,24 @@ body {
     border-radius: 15px;
 }
  /**/
-.avatar {
-    height: 100px;
-    width: 100px;
+#avatar {
+    width: 180PX;
     border-radius: 50%;
     position: absolute;
-    top: -50px;
-    left: calc(50% - 50px);
+    top: -20%;
+    left: calc(50% - 100px);
 }
+
 
 /**/
-.login-box h1 {
-    margin: 0;
-    padding: 0 0 20px;
-    text-align: center;
-    font-size: 22px;
-}
-
-.login-box .data label {
-    margin: 0;
-    padding: 0;
-    font-weight: bold;
-    display: block;
-}
-
-/**/
-.login-box .data input {
+#login-box #data input {
     width: 100%;
     margin-bottom: 20px;
     color: black;
 }
 /**/
-.login-box .data input[type="text"],
-.login-box .data input[type="password"] {
+#login-box #data input[type="text"],
+#login-box #data input[type="password"] {
     border: none;
     border-bottom: 1px solid black;
     background: transparent;
@@ -81,77 +63,49 @@ body {
     font-size: 16px;
 }
 /**/
-.login-box .data input[type="submit"] {
+#login-box #data input[type="submit"] {
     border: none;
     outline: none;
     height: 40px;
     background: #11A0BF;
     color: #ffffff;
+    cursor:pointer;
     font-size: 18px;
     border-radius: 20px;
     margin-top: 20px;
 }
 /**/
-.login-box .data input[type='checkbox'] {
+#login-box #data input[type='checkbox'] {
     height: 20px;
     width: 20px;
 }
 
-.login-box .data input[type='checkbox_pass'] {
+#login-box #data input[type='checkbox_pass'] {
     height: 10px;
     width: 10px;
 }
 
+#buttonPNG {
+    border: transparent;
+    background-color: transparent;
+    outline-color: transparent;
+}
+
 
 /**/
-.form-user {
+#form-user {
     position: relative;
     color: black;
     font-size: 16px;
 }
 
-.form-user input {
-    width: 100%;
-    height: 40px;
-    color: black;
-    background: transparent;
-    border: none;
-    border-bottom: 1px solid black;
-    outline: none;
-    font-size: 16px;
-}
-
-.form-user .fa-user {
-    position: absolute;
-    padding: 12px;
-    top: 16px;
-    left: 10px;
-    color: grey;
-}
-
-.form-user .fa-user {
-    left: 230px;
-}
-
-.form-user .fa-key {
-    position: absolute;
-    padding: 12px;
-    top: 16px;
-    left: 10px;
-    color: grey;
-}
-
-.form-user .fa-key {
-    left: 230px;
-}
-
+/**/
 .form-options {
     margin-bottom: 10px;
 }
 
 
 /*------------Estilos del footer--------------*/
-
 /**/
 .footer {
     position: fixed;
@@ -164,14 +118,4 @@ body {
     background: #000000;
 }
 
-
-/*-----------Estilos responsive----------*/
-
-@media(min-width:1024px) {
-    body {
-        overflow: hidden;
-    }
-    .footer {
-        background: #1F1A17;
-    }
-}
+/*-----------Estilos responsive texto----------*/
