--- a/views/login/login.ejs
+++ b/views/login/login.ejs
@@ -3,24 +3,52 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="/stylesheets/login.css">
-    <link href="https://fonts.googleapis.com/css?family=Oxygen:400,300,700" rel="stylesheet" type="text/css"/>
-    <link href="https://code.ionicframework.com/ionicons/1.4.1/css/ionicons.min.css" rel="stylesheet" type="text/css"/>
+    <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet"/>
+
     <title>Login</title>
 </head>
-<body>
-    <div class="login-box">
-        <img class="avatar" src="../images/logo-trys2.png" alt="logo de TRYS">
+<body id="body">
+    <div id="login-box" class="col-lg-4 col-md-8 col-sm-10">
+        <img id="avatar" class="col-lg-5 col-md-4 col-sm-3" src="../images/logo-trys2.png" alt="logo de TRYS">
         <form action="/ini" method="get">
-            <div class="data">
+            <div id="data">
                 <!--  USER -->
-                <div class="form-user">
+                <div id="form-user">
                     <label for="user">Usuario</label>
-                    <input type="text" id="user" placeholder="Escriba su usuario">
+                    <div class="container col-lg-12 col-md-12 col-sm-12">
+                        <div class="row">
+                            <div class="col-lg-10 col-md-10 col-sm-10">
+                                <input type="text" id="user" placeholder="Escriba su usuario">
+                            </div>
+                            <div class="col-lg-2 col-md-2 col-sm-2">
+                                <svg width="50" height="35">
+                                    <circle cx="25" cy="15" r="7" stroke="lightgray" stroke-width="4" fill="lightgray" />
+                                    <circle cx="25" cy="44" r="17" stroke="lightgray" stroke-width="4" fill="lightgray" />
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+                    
                 </div>
                 <!--PASSWORD-->
-                <div class="form-user">
+                <div class="form-user ">
                     <label for="password">Contraseña</label>
-                    <input type="password" id="PASSWORD" placeholder="Escriba su contraseña">
+                    <div class="container col-lg-12 col-md-12 col-sm-12">
+                        <div class="row">
+                            <div class="col-lg-10 col-md-10 col-sm-10">
+                                <input type="password" id="PASSWORD" placeholder="Escriba su contraseña">
+                            </div>
+                            <div class="col-lg-2 col-md-2 col-sm-2">
+                                <button id="buttonPNG" type="button" onClick="showPass();">
+                                    <svg width="50" height="50">
+                                        <ellipse id="eye" cx="20" cy="25" rx="18" ry="9" style="fill:lightgray;" />
+                                        <circle cx="20" cy="25" r="8" fill="white" />
+                                        <circle id="iris" cx="20" cy="25" r="4" style="fill:lightgray;" />
+                                    </svg>
+                                </button>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <!-- BUTTON LOGIN -->
                 <input type="submit"  value="INGRESAR">
@@ -39,5 +67,19 @@
         <p> &copy; TRYS BUS 2020 - Todos los derechos reservados</p>
     </footer>
 </body>
+<script>
+    function showPass() {
+        var x = document.getElementById("PASSWORD");
+        if (x.type === "password") {
+            eye.style.fill='black';
+            iris.style.fill='black';
+            x.type = "text";
+        } else {
+            eye.style.fill='lightgray';
+            iris.style.fill='lightgray';
+            x.type = "password";
+        }
+    }
+</script>
 
 </html>
